Adding new websites

--- a/VesCalc/Vesiculewebpage.html
+++ b/VesCalc/Vesiculewebpage.html
@@ -2,354 +2,32 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name ="description" content="Vesicular Content calculations">
-	<meta name="author" content="MIF 3 kurso bioinfromatikos studentas">
+	<meta name ="description" content="Vesicles Content calculations">
+	<meta name="author" content="MT&&LT">
 	
-	<script src="../javascripts/json2.js" type="text/javascript"></script>
-	<script src="../javascripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../javascripts/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../javascripts/cookies.js" type="text/javascript"></script>
-	<script src="../javascripts/flickrshow-7.2.js" type="text/javascript"></script>
-	<title> Test </title>
-</head>
-<style type="text/css">
+	<script src="../javascripts/Js4VesCalc.js" type="text/javascript"></script>
+	<title> VsC </title>
+
+<style>
 	@import url("Vesiculewebpage_style.css");
 </style>
 <script>
-	$(document).ready(function(){
-		alert("Del privatumo salygu nebus rodomi skaiciuojami procesai");
-		$('#nouser').hide();
-		$('#about').show();
-		$("#options").hide();
-		$('#login').height($('#top').height());
-		document.getElementById('name').style.height = $('#top').height()+'px';
-
-		// Prisijungimo lauko aukstis
-		$('#login').height($('#name').height());
-		$('#logo').height($('#name').height());
-		
-		// Calcs container height
-		var height = window.innerHeight;
-		newh = (height/10)*7;
-		document.getElementById('container').style.height = newh+'px';
-	
-		//Reklamos pirmots plotis
-		wcomm = $("#side").width();    	
-		$("#comm").css("width",wcomm+"px"); 
-		document.getElementById('container').style.height = newh+'px';
-		
-		// Hide all section except opening menu section
-		$(".section").not("#about").hide();
-		
-		// Change height of menu options buttons div
-		var btlen = $("#options").children().length;
-		brlen = $("#options").children('br').length;
-		if (brlen - btlen == 0){ sum = 1;}else{sum = Math.abs(brlen - btlen);}
-		$("#options").height((btlen-brlen)*50);
-	});
+    $(document).ready(function(){
+    });
 </script>
+</head>
 
-<script>
-	$( window ).resize(function() {
-		$('#login').height($('#imglogo').height());
-	});
-	window.onload = function() {
-		var chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
-		if(chrome){
-			$("#Pastas").css("left", "4.5px");
-			$("#reg").css("left", "5px");
-			$("#reg").css("left", "22px");
-		}
-	};
-	function rezults()
-	{
-		try{
-			if(getCookie("mase") == null) checkCookie("mase",document.getElementsByName('Mass')[0].value);
-			if ($("#clicks").html() == ''){$("#clicks").html(1);}
-			else $("#clicks").html(parseInt($("#clicks").html())+1);			
-			var count = document.getElementsByName('quantity')[0].value;
-			for(var i = 0;i< count;i++){
-			checkCookie("Proc", document.getElementsByName("Proc"+i)[0].value);
-			checkCookie("Molw",document.getElementsByName("Molw"+i)[0].value);
-			checkCookie("Conc", document.getElementsByName("Conc"+i)[0].value);
-			checkCookie("name", document.getElementsByName("text"+i)[0].value);
-			}
-			if(count != $("#clicks").html()) document.getElementById("check2").reset();
-			else{
-				alert(getCookie("mase"));
-				var mystring = getCookie("Procent")+getCookie("Molsvor")+getCookie("koncent")+getCookie("mase");
-				var title=document.getElementsByName("title")[0].value;
-				var myurl = "http://localhost/skaiciuok.php"
-				$.ajax({
-					type: "GET",
-					url:myurl,
-					data: {Procent:getCookie("Proc"),
-					Molsvor:getCookie("Molw"),
-					koncent:getCookie("Conc"),
-					mase:getCookie("mase"),
-					name:getCookie("name")},
-				cache:false, 
-					async:false,
-					success: function(data) {
-					// the data variable contains all PHP output during this request
-						
-						$('#rezult1').html("<h2>"+"Experiment "+title+"</h2>"+data);
-						$('#rezult1').show();
-					}
-				});	
-			}
-		}
-		catch(err){
-			$("#error").html(err.message);
-		}
-		if(count == $("#clicks").html()){ del();}
-		return false;
-	}
-</script>
-<script type="text/javascript">
-	function toggleVisibility(newSection) {
-		$(".section").not("#" + newSection).hide();
-		if (newSection === 'calc1' || newSection === 'calc2' || newSection === 'calc3') {
-			if(newSection === 'calc1'){
-				$('#field').show();
-				$('#rezult1').show();
-				$("#VscHints").show();
-			}
-			$("#calcs").show();
-			$("#options").show();
-		}
-		else{
-			$('#break').hide();
-		}	
-		$("#" + newSection).show();
-	}
-	function showfirst(){
-		$("#field").show();
-		try{
-			$("#fieldx").hide();
-		}catch(err){
-		
-		}
-	}
-	function showother(){	
-		$("#field").hide();
-		$("#fieldx").show();
-		$("#proceed").height($("#back").height());
-		$("#proceed").width($("#back").width());
-		tableCreate();
-		return false;
-	}
-</script>
-<script> // sudeti reiksmes i masyva po kekvieno mygtuko klickinimo ir siusti masyva i ta skaiciuok.php --> 
-	
-	function getuser(){
-		slapt= document.getElementsByName('slapt')[0].value;
-		Past = document.getElementById('Pastas').value;
-		var myurl = "http://localhost/Mysqli_tsk/exists.php?q="+Past;
-		$.ajax({
-			url: myurl,
-			async: false,
-			success: function(responseText) {
-				$('#LoggedIn').html(responseText);
-			},
-		})
-		var bool = $('#LoggedIn').html();
-		if(bool == 'false'){ alert('No user found'); }	
-		else{
-			alert(bool);
-			var msg = "<br>Welcome to Vesicules Content Calculator\n"+bool;
-			$('#tmp').html($('#login').html());
-			$('#login').html(msg); 
-			$("#logoout").show()
-		}
-		
-	}
-
-</script>
-<script>
-	
-	function logout(){
-		$('LoggedIn').html(''); 
-		$('#login').html($('#tmp').html());
-
-	}
-
-</script>
-<script>
-	function del(){		
-		if (getCookie("Procent")){ 
-			delCookie("Procent");
-			delCookie("Molsvor");
-			delCookie("mase");
-			delCookie("koncent");
-			delCookie("name");
-	}
-
-	document.getElementById("check2").reset();
-	document.getElementById("check").reset();
-	showfirst();
-	$("#clicks").html('');	
-	
-	}
-</script>
-<script text="Javascript">
-
-	function makeblur(blurvalue,toshow){
-		$(".blur").css({
-			'filter'         : blurvalue,
-			'-webkit-filter' : blurvalue,
-			'-moz-filter'    : blurvalue,
-			'-o-filter'      : blurvalue,
-			'-ms-filter'     : blurvalue
-		});
-		if(toshow == 1){
-			$("#Fuserbox").show();
-		}else{
-			$("#Fuserbox").hide();
-		}
-		return false;
-	}
-
-</script>
-<script>
-	function checknsend(){
-		var Past = document.getElementsByName('fPastas')[0].value;
-		var myurl = "http://localhost/Mysqli_tsk/ChecknSend.php?q="+Past;
-		$.ajax({
-			url: myurl,
-			async: false,
-			success: function(responseText) {
-				$('#REZ').html(responseText);
-			},
-		});
-		var bool = $('#REZ').html();
-		$.trim(bool);
-		alert(bool);
-
-		}
-</script>
 <body>
-	<div id="fb-root"></div>
-	<script>(function(d, s, id) {
-		var js, fjs = d.getElementsByTagName(s)[0];
-		if (d.getElementById(id)) return;
-		js = d.createElement(s); js.id = id;
-		js.src = "//connect.facebook.net/lt_LT/sdk.js#xfbml=1&version=v2.0";
-		fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));
-	</script>
-	
-	<div id="top" class="blur">
-		<div id="logo"><img id = "imglogo" src="../pict/logo.png"></div>
-		<div id="name"><h3>Vesicule Calculations ©#$</h3></div>
-		<div id="login" class="logintext">
-			<form onsubmit="return getuser();" name="tables" 
-				id = 'logform' action="" method="post">  
-				E-Mail <br>
-				<input type="email" id = 'Pastas'>
-				<br>Password:</br>
-				<input type='password' name='slapt' required/>
-				<br>
-			</form>
-			<input type="submit" value="Sign In " form = "logform" class="SignReg"> 
-			<button class="SignReg" onclick = "window.location.href='Registracija.html'">Register</button>
-			</br>
-			<button id = "Forgot" onclick="makeblur('blur(5px)',1)" >Forgot password?</button>
-		</div>			
-	</div> 
-	
-	<div id="container" class="blur">
-		<div id="menu" >
-			<b>
-			<br>
-			<button class='menu' onmouseover="toggleVisibility('about');return false;" >  Home </button><br>
-			</br>
+    <button class = 'menubt' style="top:25%" onmouseover="toggleVisibility('about');return false;" >  Home </button><br>
 
-			<button class='menu' onmouseover="$('#options').show();$('#break').show();return false;">Calcs</button>
-			<br></br>
-	
-			<div id="options"  class = "section menu">
-				<button class="option" href = "#">Vsc</button><br></br>
-				<button class="option" href = "#" onmouseover="toggleVisibility('calc2');">LpV</button><br></br>
-			</div>
+    <button class = 'menubt' style="top:35%" onmouseover="toggleVisibility('calc1');">Calculation</button><br><br />
 
-			<button id ="butt"  class='menu' onmouseover="toggleVisibility('contacts'); return false;" >Contacts </button>
-			<br></br>
+    <button class = 'menubt' style="top:45%" id ="butt" onmouseover="toggleVisibility('contacts'); return false;" >Contacts </button>
 
-			<button id = "profile-button" class = 'menu' onmouseover="toggleVisibility('profile');">Profile</button>
-			</br><br>
-
-			<div class="fb-like" data-href="http://www.google.com" data-layout="box_count"
-					     data-action="like" data-show-faces="true" 
-					     data-share="true" data-send="true">
-			</div>	
-		</div>
-
-		<div id="about" class="section">
-                        <p>This web page was created to save researchers time by 
-				making calculations for liposome preparation and their properties more convenient.
-			<br><p>Here you will find three types of calculations which allows you to: 
-			<br><p>1) Calculate volumes of lipid solutions (unlimited number of different lipids solutions) 
-				required to prepare certain composition of liposomes.
-			<br><p>2) Calculate molecular weight of any composition and size liposome.
-			<br><p>3) Calculate number of lipids per liposome of any composition and size. 
-				Which allows you to decide how much of a certain lipid, protein or any other 
-				molecule to add into the lipid mixture during liposome preparation to have a single 
-				copy of it percertain size of liposome.
-			<br><p>Working with this toolkit you will find an extra option (10 dollars/year) 
-				to make your own personalised library of lipid info - once lipidname and its 
-				properties are entered it will be saved and next time you will not need to 
-				spend time to enter all that information.
-			</p>
-                </div>
-		
-		<div id = 'calcs' class='section'>
-			<form id="check" onsubmit="return showother();"></form>
-			<form id="check2" onsubmit="return rezults();" ></form>
-
-			<div id="VscHints" class="section "><h3>Hints</h3><br>Number of lipids - how many lipid's to create<br></div>
-			<div id="rezult1" class="section" >Rezai</div>
-		</div>
-		
-		<div id="contacts" class = "section">
-		</div>
-
-		<div id = 'profile' class = "section">
-			Profilis
-			<div id="profile" >
-				
-			</div>
-		</div>
-
-		
-		<div id ="side" >
-			<img class="advert" id = "comm" src="../pict/htmlimg.jpg" 
-				style="min-width:100%;min-height:50%;display: block;" alt = "htmlimg2" >
-			<img class="advert" src="../pict/Firefox.jpg" 
-				style="max-width:50%;min-height:50%;display: inline;" alt = "htmlimg2" >
-			<img class="advert" src="../pict/chrome.jpg" 
-				style="min-height:50%;max-width:50%;;display:inline;float:left;max-width:50%;" alt = "htmlimg2" >
-		</div>
-			
-	</div>
-	
-	<div id = "bot" class = "blur">
-		<h4>Copyright ©Luksys Tm.</h4>
-	</div>
-	
-	<div id = "REZ"></div>
-	
-	<form id ="Fuserbox" class ='section' onsubmit="return checknsend()" action"">
-		<h4 style="margin-left:-25px;">
-			<br>Enter E-mail
-			<input type="email" name ="fPastas" ></input>
-			<input type = "submit" value ="Send"></input>
-			<button form="Fuserbox" 
-				onclick="return makeblur('blur(0px)', 0)">
-				Cancel
-			</button>
-		</h4>
-	</form>
-	<div id = "tmp" class = 'section'></div>
-	<div id = "LoggedIn" class = 'section'></div>
+    <button class = 'menubt' style="top:55%" onmouseover = "toggleVisibility('donate'); return false;" > Donation </button>
+   
 </body>
+
 </html>
